This file contains a summary of important user-visible changes.

Changes since 1.7
=================

Changes:
* Java API change: The name of CVC4's package is now `edu.stanford.CVC4`
  instead of `edu.nyu.acsys.CVC4`.

Changes since 1.6
=================

New Features:
* Proofs:
  * Support for bit-vector proofs with eager bitblasting (older versions only
    supported proofs with lazy bitblasting).
* Strings:
  * Support for `str.replaceall` operator.
  * New option `--re-elim` to reduce regular expressions to extended string
    operators, resulting in better performance on regular expression benchmarks
    (enabled by default).
* SyGuS:
  * Support for abduction (`--sygus-abduct`). Given a formula, this option uses
    CVC4's SyGuS solver to find a sufficient condition such that the
    conjunction of the condition and the formula is unsatisfiable.
  * Support for two new term enumerator strategies: variable agnostic
    (`--sygus-active-gen=var-agnostic`) and fast (`--sygus-active-gen=enum`).
    By default, CVC4 tries to choose the best term enumerator strategy
    automatically based on the input (`--sygus-active-gen=auto`).
  * Support for streaming solutions of increasingly smaller size when using the
    PBE solver (`--sygus-stream --sygus-pbe`). After the first solution is found
    and printed, the solver will continue to look for new solutions and print
    those, if any, that are smaller than previously printed solutions.
  * Support for unification-based techniques in non-separable specifications
    (`--sygus-unif`). For solving invariant problems a dedicate mode
    (`--sygus-unif-boolean-heuristic-dt`) is available that builds candidate
    solutions using heuristic decision tree learning.

Improvements:
* Strings:
  * Significantly better performance on string benchmarks over the core theory
    and those with extended string functions like substring, contains, and
    replace.

Changes: